--- a/index.html
+++ b/index.html
@@ -1,27 +1,62 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<meta charset="utf-8">
-   <title>Accueil</title>
-   <link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TamaWebsite, Acceuil</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 </head>
-<body id="acceuil">
-	<div id="acceuil__main-1">
-		<p class="acceuil__main-1__text">
-		You might find something interesting down-there<br><br>
-		Scroll Down</p>
-		<img class="acceuil__main-1__image" src="img/scrollDown.png">	
-	</div>
-	
-	
-	<div id="acceuil__main-2">
-		<img class="acceuil__main-2__image" src="img/tamanoir.png" alt="un tamanoir est passe par la">
-		<p class="acceuil__main-2__text">
-		Welcome to my sweet home jungle<br><br>Feel free to <a href="about.html">enter</a>
-		</p>
-	</div>
-	
-	
-	<script src="main.js"></script>
+<body>
+    <div id="frame-1">
+        <div>
+        <h1>Tama<br>Website</h1>
+        </div>
+        <img src="images/anteater/anteater.webp" alt="An anteater forgot to come"/>
+        <p>This website was made by an anteater.<br>
+        I hope you don't mind seing some ants<br>
+        running here and there ...
+        </p>
+        <h2>Scroll down ;)</h2>
+    </div>
+    <div id="frame-2">
+        <h1>About :</h1>
+        <div>
+            <p>Let me present myself.<br>
+            My name's Tamanoir.<br>
+            It's the french for anteater,<br>
+            what a coincidence ;)
+            </p>
+            <img src="images/anteater/anteater-tongue.webp" alt="My beautiful nose"/>
+        </div>
+        <img src="images/anteater/anteater.webp" alt="An anteater forgot to come"/>
+    </div>
+    <div id="frame-3">
+        <div>
+            <h1>My skills :</h1>
+            <br>
+            <p>So you made it this far ... <br>
+            I assume you want to know <br>
+            what an anteater can do with his long claws.
+            </p>
+        </div>
+        <p>I can design, code, <br>
+        and help you find the best hosting solution <br>
+        for your portfolio or showcase websites ;)
+        </p>
+        <ul>
+            <h2>Skill chart :</h2>
+            <br>
+            <li class="html-cursor">HTML : </li>
+            <li class="css-cursor">CSS : </li>
+            <li class="js-cursor">JAVASCRIPT : </li>
+        </ul> 
+
+        </div>
+    </div>
+    <div id="frame-4">
+        <p>page 4 coming</p>
+    </div>
+    <script src="main.js"></script>
 </body>
 </html>
