--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div id="container">
     <div id="frame-1">
         <div>
         <h1>Tama<br>Website</h1>
         </div>
-        <img src="images/anteater/anteater.webp" alt="An anteater forgot to come"/>
+        <img src="images/anteater/anteater.webp" alt="An anteater forgot to come">
         <p>This website was made by an anteater.<br>
         I hope you don't mind seing some ants<br>
         running here and there ...
@@ -27,9 +28,9 @@
             It's the french for anteater,<br>
             what a coincidence ;)
             </p>
-            <img src="images/anteater/anteater-tongue.webp" alt="My beautiful nose"/>
+            <img src="images/anteater/anteater-tongue.webp" alt="My beautiful nose">
         </div>
-        <img src="images/anteater/anteater.webp" alt="An anteater forgot to come"/>
+        <img src="images/anteater/anteater.webp" alt="An anteater forgot to come">
     </div>
     <div id="frame-3">
         <div>
@@ -47,16 +48,29 @@
         <ul>
             <h2>Skill chart :</h2>
             <br>
-            <li class="html-cursor">HTML : </li>
-            <li class="css-cursor">CSS : </li>
-            <li class="js-cursor">JAVASCRIPT : </li>
+            <li id="html-cursor">HTML : </li>
+            <li id="css-cursor">CSS : </li>
+            <li id="js-cursor">JAVASCRIPT : </li>
         </ul> 
-
-        </div>
     </div>
     <div id="frame-4">
-        <p>page 4 coming</p>
+        <h1>Contact : </h1>
+        <div>
+            <h2>Follow me on : </h2>
+            <br><br>
+            <div>
+                <ul>
+                    <li>Github <img src="images/icons/github.webp" alt="Github"></li>
+                    <li>Discord <img src="images/icons/discord.webp" alt="Discord"></li>
+                    <li>Stackoverflow <img src="images/icons/stackoverflow.webp" alt="Stackoverflow"></li>
+                </ul>
+                <img src="images/anteater/anteater-profil.webp" alt="an anteater didn't want to show his face">
+            </div>
+        </div>
+        <p>Contact me if you think <br>
+        an anteater is the only solution to your needs </p>
+    </div>
     </div>
     <script src="main.js"></script>
-</body>
+    </body>
 </html>
