--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TamaWebsite, Acceuil</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="/TamaWebsite/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -13,7 +13,7 @@
         <div>
         <h1>Tama<br>Website</h1>
         </div>
-        <img src="images/anteater/anteater.webp" alt="An anteater forgot to come">
+        <img src="/TamaWebsite/images/anteater/anteater.webp" alt="An anteater forgot to come">
         <p>This website was made by an anteater.<br>
         I hope you don't mind seing some ants<br>
         running here and there ...
@@ -28,9 +28,9 @@
             It's the french for anteater,<br>
             what a coincidence ;)
             </p>
-            <img src="images/anteater/anteater-tongue.webp" alt="My beautiful nose">
+            <img src="/TamaWebsite/images/anteater/anteater-tongue.webp" alt="My beautiful nose">
         </div>
-        <img src="images/anteater/anteater.webp" alt="An anteater forgot to come">
+        <img src="/TamaWebsite/images/anteater/anteater.webp" alt="An anteater forgot to come">
     </div>
     <div id="frame-3">
         <div>
@@ -60,17 +60,17 @@
             <br><br>
             <div>
                 <ul>
-                    <li>Github <img src="images/icons/github.webp" alt="Github"></li>
-                    <li>Discord <img src="images/icons/discord.webp" alt="Discord"></li>
-                    <li>Stackoverflow <img src="images/icons/stackoverflow.webp" alt="Stackoverflow"></li>
+                    <li>Github <img src="/TamaWebsite/images/icons/github.webp" alt="Github"></li>
+                    <li>Discord <img src="/TamaWebsite/images/icons/discord.webp" alt="Discord"></li>
+                    <li>Stackoverflow <img src="/TamaWebsite/images/icons/stackoverflow.webp" alt="Stackoverflow"></li>
                 </ul>
-                <img src="images/anteater/anteater-profil.webp" alt="an anteater didn't want to show his face">
+                <img src="/TamaWebsite/images/anteater/anteater-profil.webp" alt="an anteater didn't want to show his face">
             </div>
         </div>
         <p>Contact me if you think <br>
         an anteater is the only solution to your needs </p>
     </div>
     </div>
-    <script src="main.js"></script>
+    <script src="/TamaWebsite/main.js"></script>
     </body>
 </html>
